deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stocksvision
  labels:
    app: stocksvision
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stocksvision
    spec:
      containers:
# webui              
        - name: webui
          image: kristianwindsor/stocksvision-webui
          ports:
            - containerPort: 80
# backend              
        - name: backend
          image: kristianwindsor/stocksvision-backend
          ports:
            - containerPort: 5000
# mysql              
        - name: mysql
          image: kristianwindsor/stocksvision-mysql
          ports:
            - containerPort: 3306
          volumeMounts:
           - name: stocksvision-mysql
             mountPath: /var/lib/mysql
# crawl api              
        - name: crawlapi
          image: kristianwindsor/stocksvision-crawlapi
          ports:
            - containerPort: 8083
        - name: crawlscheduler
          image: kristianwindsor/stocksvision-crawlscheduler
        - name: phpmyadmin
          image: kristianwindsor/stocksvision-phpmyadmin
          ports:
            - containerPort: 8080
              name: phpmyadmin
      imagePullSecrets:
        - name: dockerhub
      volumes:
       - name: stocksvision-mysql
         persistentVolumeClaim:
           claimName: stocksvision-mysql
