statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stocksvision
spec:
  selector:
    matchLabels:
      app: stocksvision
  serviceName: "stocksvision"
  template:
    metadata:
      labels:
        app: stocksvision
    spec:
      containers:
#              
        - name: webui
          image: kristianwindsor/stocksvision-webui
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0m"
#              
        - name: backend
          image: kristianwindsor/stocksvision-backend:b4
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "20m"
#              
        - name: mysql
          image: kristianwindsor/stocksvision-mysql
          ports:
            - containerPort: 3306
          volumeMounts:
           - name: stocksvision-mysql
             mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "20m"
#            
        - name: crawler
          image: kristianwindsor/stocksvision-crawler
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "15m"
#    
        - name: crawlscheduler
          image: kristianwindsor/stocksvision-crawlscheduler
          resources:
            requests:
              cpu: "10m"
#           
        - name: phpmyadmin
          image: kristianwindsor/stocksvision-phpmyadmin
          ports:
            - containerPort: 8080
              name: phpmyadmin
          resources:
            requests:
              cpu: "5m"
#
      imagePullSecrets:
        - name: dockerhub
      volumes:
       - name: stocksvision-mysql
         persistentVolumeClaim:
           claimName: stocksvision-mysql
  volumeClaimTemplates:
  - metadata:
      name: stocksvision-mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 100Gi
