service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocksvision
  labels:
    app: stocksvision
spec:
  selector:
    app: stocksvision
  ports:
    - name: webui
      port: 80
    - name: backend
      port: 5000
    - name: crawler
      port: 5001
    - name: phpmyadmin
      port: 8080
