ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stocksvision-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  rules:
  - host: stocks.vision
    http:
      paths:
      - path: /
        backend:
          serviceName: stocksvision
          servicePort: 80
  - host: api.stocks.vision
    http:
      paths:
      - path: /
        backend:
          serviceName: stocksvision
          servicePort: 5000
  - host: phpmyadmin.stocks.vision
    http:
      paths:
      - path: /
        backend:
          serviceName: stocksvision
          servicePort: 8080
  tls:
  - secretName: stocksvision-cert
    hosts:
    - stocks.vision
    - api.stocks.vision
    - phpmyadmin.stocks.vision
